syntax = "proto3";

message User{
    string id = 1;
    string username = 2;
    string password = 3;
}

service UserService{
    rpc GetUser(User) returns (User);
    rpc CreateUser(User) returns (User);
    rpc UpdateUser(User) returns (User);
    rpc DeleteUser(User) returns (User);
}
